[package]
name = "rust-git"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
anyhow = "1.0"
flate2 = "1.0" # Git uses zlib compression usually, though for simple version we might skip it or use it. Let's add it just in case we want to be closer to real git later, but maybe stick to simple JSON for now as per design. I'll skip flate2 for now to keep it simple as designed.
